<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/common_padding_min"
    app:cardCornerRadius="@dimen/common_padding_min">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_padding_min">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivContact"
            android:layout_width="@dimen/image_size"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            android:background="@color/gray_100"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/contact_name"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivContact" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTelNum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/contact_tel"
            android:textAppearance="?attr/textAppearanceSubtitle2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvName" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/contact_address"
            android:textAppearance="?attr/textAppearanceSubtitle2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTelNum" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>